# controllers/web_controller.go
@@ -1,0 +1,48 @@
+package controllers
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Message godoc
+// @summary Message
+// @description Message for the service
+// @id Message
+// plain json xml x-www-form-urlencoded
+// @produce plain
+// @response 200 {object} model.Transaction "OK"
+// get post put delete patch
+// @router /message [get]
+func Message(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"message": "Hello World",
+	})
+}
+
+// Ping godoc
+// @summary Ping
+// @description Ping for the service
+// @id Ping
+// @produce plain
+// @response 200 {object} model.Product "OK"
+// @router /ping [get]
+func Ping(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"message": "pong",
+	})
+}
+
+// Test godoc
+// @summary Test
+// @description Test for the service
+// @id Test
+// @produce plain
+// @response 200 {object} model.User "OK"
+// @router /test [get]
+func Test(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"message": "test",
+	})
+}
